--- a/postgres/macros.jinja
+++ b/postgres/macros.jinja
@@ -1,4 +1,5 @@
-{%- from "postgres/map.jinja" import postgres with context -%}
+
+{%- from rootdir ~ "/map.jinja" import postgres with context -%}
 
 {%- macro format_kwargs(kwarg) -%}
 
